Bug 1572876 - Rename password manager doorhanger/autofill/autocomplete b-c tests with a consistent prefix. r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D49984

--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -17,7 +17,7 @@ support-files =
 skip-if = os == "linux" || os == "mac"  # Bug 1425879
 [browser_autofill_track_filled_logins.js]
 [browser_basicAuth_rateLimit.js]
-[browser_capture_doorhanger.js]
+[browser_doorhanger_remembering.js]
 skip-if = os == "linux" && debug # Bug 1334336
 support-files =
   subtst_notifications_1.html
@@ -32,17 +32,17 @@ support-files =
   subtst_notifications_9.html
   subtst_notifications_10.html
   subtst_notifications_change_p.html
-[browser_capture_doorhanger_crossframe.js]
+[browser_doorhanger_crossframe.js]
 support-files =
   form_crossframe.html
   form_crossframe_inner.html
-[browser_capture_doorhanger_empty_password.js]
+[browser_doorhanger_empty_password.js]
 skip-if = true # Bug 1272849
-[browser_capture_doorhanger_httpsUpgrade.js]
+[browser_doorhanger_httpsUpgrade.js]
 support-files =
   subtst_notifications_1.html
   subtst_notifications_8.html
-[browser_capture_doorhanger_window_open.js]
+[browser_doorhanger_window_open.js]
 support-files =
   subtst_notifications_11.html
   subtst_notifications_11_popup.html
@@ -62,22 +62,22 @@ skip-if = (os == "linux") || (os == "mac") # Bug 1337606
 support-files =
   file_focus_before_DOMContentLoaded.sjs
 [browser_formless_submit_chrome.js]
-[browser_generated_password_doorhangers.js]
+[browser_doorhanger_generated_password.js]
 support-files =
   form_password_change.html
-[browser_generated_password_private_window.js]
-[browser_http_autofill.js]
+[browser_autocomplete_generated_password_private_window.js]
+[browser_autofill_http.js]
 fail-if = fission # bug 1570243
 skip-if = fission || verify
-[browser_hidden_document_autofill.js]
+[browser_autofill_hidden_document.js]
 skip-if = os == "win" && os_version == "10.0" && debug # bug 1530935
 [browser_insecurePasswordConsoleWarning.js]
 skip-if = verify
-[browser_master_password_autocomplete.js]
-[browser_notifications.js]
-[browser_notifications_username.js]
-[browser_notifications_password.js]
-[browser_notifications_2.js]
+[browser_autocomplete_master_password.js]
+[browser_doorhanger_save_password.js]
+[browser_doorhanger_username_edits.js]
+[browser_doorhanger_password_edits.js]
+[browser_doorhanger_toggles.js]
 [browser_openPasswordManager.js]
 [browser_passwordmgr_editing.js]
 skip-if = (os == "linux") || (debug && os == "mac") # Bug 1537634
@@ -96,5 +96,5 @@ skip-if = (debug && os == "mac") # Bug 1530566
 support-files =
   subtst_privbrowsing_1.html
   form_password_change.html
-[browser_promptToChangePassword.js]
+[browser_doorhanger_promptToChangePassword.js]
 
