--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -74,6 +74,21 @@ skip-if = (os == 'android') || (os == 'linux') || (os == 'win')
 # Timeout on D3D11
 skip-if = (os == 'win')
 
+# -
+# Large tex allocations
+
+[generated/test_2_conformance__textures__misc__texture-size.html]
+# https://bugzilla.mozilla.org/show_bug.cgi?id=1657084
+# Really slow on ASAN (after driver update?), likely due to ASAN's perf impact on the huge allocations in this test.
+skip-if = (os == 'linux' && asan) || (os == 'win')
+[generated/test_2_conformance__textures__misc__texture-size-cube-maps.html]
+# Random failures
+skip-if = (os == 'win')
+[generated/test_2_conformance__textures__misc__texture-size-limit.html]
+# https://bugzilla.mozilla.org/show_bug.cgi?id=1657084
+# Really slow on ASAN (after driver update?), likely due to ASAN's perf impact on the huge allocations in this test.
+skip-if = (os == 'linux' && asan)
+
 ########################################################################
 # Global
 
@@ -1124,16 +1139,11 @@ skip-if = (os == 'win')
 [generated/test_2_conformance__canvas__to-data-url-test.html]
 # TEST-UNEXPECTED-ERROR: Assertion count 1 is greater than expected range 0-0 assertions
 skip-if = (os == 'win')
-[generated/test_2_conformance__textures__misc__texture-size-cube-maps.html]
-# Random failures
-skip-if = (os == 'win')
 [generated/test_2_conformance__ogles__GL__struct__struct_025_to_032.html]
 # application crashed [@ nvoglv32.dll + 0x90b445]
 skip-if = (os == 'win')
 [generated/test_2_conformance__uniforms__out-of-bounds-uniform-array-access.html]
 # application terminated
-skip-if = (os == 'win')
-[generated/test_2_conformance__textures__misc__texture-size.html]
 skip-if = (os == 'win')
 [generated/test_2_conformance2__query__occlusion-query.html]
 skip-if = (os == 'win')
