--- a/taskcluster/ci/fetch/toolchains.yml
+++ b/taskcluster/ci/fetch/toolchains.yml
@@ -364,8 +364,8 @@ mingw-w64:
     description: mingw-w64 source code
     fetch:
         type: git
-        repo: git://git.code.sf.net/p/mingw-w64/mingw-w64
-        revision: 1b373beec6d07478ffba33726bb3bb21f32e4411
+        repo: https://git.code.sf.net/p/mingw-w64/mingw-w64
+        revision: bd8ca6c303658659496d0c440cf9f2baa8f7a5f0
 
 libunwind:
     description: libunwind source code
