--- a/browser/components/shopping/tests/browser/browser.ini
+++ b/browser/components/shopping/tests/browser/browser.ini
@@ -16,6 +16,7 @@ prefs =
 [browser_private_mode.js]
 [browser_review_highlights.js]
 [browser_settings_telemetry.js]
+[browser_shopping_container.js]
 [browser_shopping_onboarding.js]
 [browser_shopping_settings.js]
 [browser_shopping_urlbar.js]
