Bug 1680132 - Re-enable / re-triage xpcshell failures on Android r=rpl
Changed remaining annotations from bug 1680132, to explain more
explicitly why the test is skipped, and link the relevant bugs where
possible.

Differential Revision: https://phabricator.services.mozilla.com/D186042

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -121,7 +121,7 @@ skip-if =
 [test_ext_dnr_allowAllRequests.js]
 [test_ext_dnr_api.js]
 [test_ext_dnr_download.js]
-skip-if = os == "android" # Android: Bug 1680132; downloads.download goes through the embedder app instead of Gecko.
+skip-if = os == "android" # Android: downloads.download goes through the embedder app instead of Gecko, and cannot be intercepted.
 [test_ext_dnr_dynamic_rules.js]
 [test_ext_dnr_modifyHeaders.js]
 [test_ext_dnr_private_browsing.js]
@@ -223,13 +223,12 @@ skip-if = true # Bug 1622433 needs h2 proxy implementation
 [test_ext_proxy_config.js]
 skip-if =
   appname == "thunderbird"
-  os == "android" # Android: Bug 1680132
 [test_ext_proxy_containerIsolation.js]
 [test_ext_proxy_onauthrequired.js]
 [test_ext_proxy_settings.js]
 skip-if =
   appname == "thunderbird"
-  os == "android" # proxy settings are not supported on android
+  os == "android" # Bug 1725981: proxy settings are not supported on android
 [test_ext_proxy_socks.js]
 skip-if = socketprocess_networking
 run-sequentially = TCPServerSocket fails otherwise
@@ -296,7 +295,7 @@ skip-if =
 [test_ext_storage_content_local.js]
 skip-if = os == "android" && debug
 [test_ext_storage_content_sync.js]
-skip-if = os == "android" # Android: Bug 1680132
+skip-if = os == "android" # Bug 1625257 - support non-Kinto storage.sync on Android
 [test_ext_storage_content_sync_kinto.js]
 skip-if = os == "android" && debug
 [test_ext_storage_quota_exceeded_errors.js]
@@ -313,15 +312,15 @@ skip-if =
   os == "android" # Sanitizer.jsm is not in toolkit.
 [test_ext_storage_session.js]
 [test_ext_storage_sync.js]
-skip-if = os == "android" # Bug 1680132 ; SessionStoreFunctions.sys.mjs relies on SessionStore.sys.mjs that does not exist on Android.
+skip-if = os == "android" # Bug 1625257 - support non-Kinto storage.sync on Android
 [test_ext_storage_sync_kinto.js]
 skip-if =
   appname == "thunderbird"
-  os == "android"
+  os == "android" # resource://services-sync not bundled with Android
 [test_ext_storage_sync_kinto_crypto.js]
 skip-if =
   appname == "thunderbird"
-  os == "android"
+  os == "android" # resource://services-sync not bundled with Android
 [test_ext_storage_tab.js]
 [test_ext_storage_telemetry.js]
 skip-if = os == "android" # checking for telemetry needs to be updated: 1384923
@@ -352,7 +351,7 @@ skip-if =
   os == "android" && processor == 'x86_64' # Bug 1683253
 [test_ext_webRequest_containerIsolation.js]
 [test_ext_webRequest_download.js]
-skip-if = os == "android" # Android: Bug 1680132; downloads.download goes through the embedder app instead of Gecko.
+skip-if = os == "android" # Android: downloads.download goes through the embedder app instead of Gecko.
 [test_ext_webRequest_filterTypes.js]
 [test_ext_webRequest_from_extension_page.js]
 [test_ext_webRequest_incognito.js]
@@ -375,7 +374,7 @@ skip-if = appname == "thunderbird"
 [test_ext_webRequest_startup.js]
 skip-if = os == "android" # bug 1683159
 [test_ext_webRequest_style_cache.js]
-skip-if = os == "android" # Android: Bug 1680132
+skip-if = os == "android" # bug 1848398 - style cache miss on Android.
 [test_ext_webRequest_suspend.js]
 [test_ext_webRequest_userContextId.js]
 [test_ext_webRequest_viewsource.js]
