Bug 1848401 - Add a testcase to ensure only one tab is opened when mousedown occurs on the new-tab button and mouseup occurs on the menuitem r=Gijs
This is a follow-up for bug 1846714.

Differential Revision: https://phabricator.services.mozilla.com/D186039

--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -11,6 +11,7 @@ prefs =
   browser.sessionstore.closedTabsFromAllWindows=true
 
 [browser_addAdjacentNewTab.js]
+[browser_addNewTab_mouseup_submenu.js]
 [browser_addTab_index.js]
 [browser_adoptTab_failure.js]
 [browser_allow_process_switches_despite_related_browser.js]
