Bug 1819464 - Part 2: Add content-box and stroke-box into transform-box in style. r=emilio
Also, add a prefernce for content-box and stroke-box. So we have to
define a new type, TransformBox, and let content-box and stroke-box
behind the preference.

Differential Revision: https://phabricator.services.mozilla.com/D185363

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -517,6 +517,7 @@ cbindgen-types = [
     { gecko = "StyleGenericPerspective", servo = "crate::values::generics::box_::Perspective" },
     { gecko = "StyleZIndex", servo = "crate::values::computed::ZIndex" },
     { gecko = "StyleGenericZIndex", servo = "crate::values::generics::position::ZIndex" },
+    { gecko = "StyleTransformBox", servo = "crate::values::computed::TransformBox" },
     { gecko = "StyleTransformOrigin", servo = "crate::values::computed::TransformOrigin" },
     { gecko = "StyleTransformStyle", servo = "crate::values::computed::TransformStyle" },
     { gecko = "StyleGenericBorderRadius", servo = "crate::values::generics::border::BorderRadius" },
