--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2474,6 +2474,29 @@
   value: @IS_NOT_NIGHTLY_BUILD@
   mirror: always
 
+# If this pref is set to true, typing a surrogate pair causes one `keypress`
+# event whose `charCode` stores the unicode code point over 0xFFFF.  This is
+# compatible with Safari and Chrome in non-Windows platforms.
+# Otherwise, typing a surrogate pair causes two `keypress` events.  This is
+# compatible with legacy web apps which does
+# `String.fromCharCode(event.charCode)`.
+- name: dom.event.keypress.dispatch_once_per_surrogate_pair
+  type: bool
+  value: false
+  mirror: always
+
+# This is meaningful only when `dispatch_once_per_surrogate_pair` is false.
+# If this pref is set to true, `.key` of the first `keypress` is set to the
+# high-surrogate and `.key` of the other is set to the low-surrogate.
+# Therefore, setting this exposing ill-formed UTF-16 string with `.key`.
+# (And also `InputEvent.data` if pressed in an editable element.)
+# Otherwise, `.key` of the first `keypress` is set to the surrogate pair, and
+# `.key` of the second `keypress` is set to the empty string.
+- name: dom.event.keypress.key.allow_lone_surrogate
+  type: bool
+  value: @IS_NOT_EARLY_BETA_OR_EARLIER@
+  mirror: always
+
 # Whether wheel event target's should be grouped. When enabled, all wheel
 # events that occur in a given wheel transaction have the same event target.
 - name: dom.event.wheel-event-groups.enabled
