Backed out changeset 332b088b3141 (bug 1774315) for causing scroll related failures. CLOSED TREE

--- a/testing/web-platform/meta/css/css-writing-modes/forms/text-input-vertical-overflow-no-scroll.html.ini
+++ b/testing/web-platform/meta/css/css-writing-modes/forms/text-input-vertical-overflow-no-scroll.html.ini
@@ -7,6 +7,11 @@
 
   [input[type=text\] in sideways-lr: typing characters in input should not cause the page to scroll]
     expected:
+      if (os == "win") and not debug and (processor == "x86"): [PASS, FAIL]
+      if (os == "android") and debug and swgl: [PASS, FAIL]
+      if (os == "android") and debug and not swgl: PASS
+      if (os == "linux") and debug: FAIL
+      if (os == "android") and not debug: [PASS, FAIL]
       if os == "mac": PASS
       [FAIL, PASS]
 
@@ -21,6 +26,11 @@
 
   [input[type=password\] in sideways-lr: typing characters in input should not cause the page to scroll]
     expected:
+      if (os == "win") and not debug and (processor == "x86_64"): [PASS, FAIL]
+      if (os == "android") and debug and swgl: [PASS, FAIL]
+      if (os == "android") and debug and not swgl: PASS
+      if (os == "android") and not debug: [PASS, FAIL]
+      if (os == "linux") and debug: FAIL
       if os == "mac": PASS
       [FAIL, PASS]
 
@@ -39,6 +49,10 @@
 
   [input[type=search\] in sideways-lr: typing characters in input should not cause the page to scroll]
     expected:
+      if (os == "android") and debug and not swgl: PASS
+      if (os == "android") and debug and swgl: [PASS, FAIL]
+      if (os == "android") and not debug: [PASS, FAIL]
+      if (os == "linux") and debug: FAIL
       if os == "mac": PASS
       [FAIL, PASS]
 
@@ -62,6 +76,12 @@
 
   [input[type=number\] in sideways-lr: typing characters in input should not cause the page to scroll]
     expected:
+      if (os == "linux") and debug and swgl and fission: [FAIL, PASS]
+      if (os == "linux") and debug and swgl and not fission: FAIL
+      if (os == "linux") and debug and not swgl: FAIL
+      if (os == "win") and not debug and (processor == "x86"): [FAIL, PASS]
+      if (os == "android") and debug and not swgl: PASS
+      if (os == "linux") and not debug: [FAIL, PASS]
       if os == "mac": PASS
       [PASS, FAIL]
 
