Bug 1848956 - Adjust cts expextations. r=webgpu-reviewers,ErichDonGubler
Differential Revision: https://phabricator.services.mozilla.com/D186721

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/47/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/47/cts.https.html.ini
@@ -72,688 +72,688 @@
 
 [cts.https.html?q=webgpu:shader,validation,parse,identifiers:identifiers:*]
   [:ident="_"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="__"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="__foo"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="0foo"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo.bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo-bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo%2Bbar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo%23bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo!bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo%5C%5Cbar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo%2Fbar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo,bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo%40bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="foo::bar"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="atomic"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="bool"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="f32"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="f16"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="i32"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat2x2"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat2x3"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat2x4"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat3x2"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat3x3"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat3x4"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat4x2"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat4x3"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mat4x4"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="ptr"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="sampler"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="sampler_comparison"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_1d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_2d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_2d_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_3d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_cube"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_cube_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_multisampled_2d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_storage_1d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_storage_2d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_storage_2d_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_storage_3d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_depth_2d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_depth_2d_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_depth_cube"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_depth_cube_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="texture_depth_multisampled_2d"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="u32"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="vec2"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="vec3"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="vec4"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="bitcast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="break"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="case"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="const"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="continue"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="continuing"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="default"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="discard"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="else"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="enable"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="false"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="fn"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="for"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="if"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="let"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="loop"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="override"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="return"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="static_assert"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="struct"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="switch"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="true"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="type"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="var"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="while"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="CompileShader"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="ComputeShader"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="DomainShader"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="GeometryShader"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="Hullshader"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="NULL"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="Self"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="abstract"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="active"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="alignas"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="alignof"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="as"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="asm"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="asm_fragment"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="async"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="attribute"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="auto"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="await"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="become"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="binding_array"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="cast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="catch"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="class"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="co_await"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="co_return"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="co_yield"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="coherent"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="column_major"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="common"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="compile"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="compile_fragment"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="concept"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="const_cast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="consteval"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="constexpr"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="constinit"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="crate"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="debugger"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="decltype"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="delete"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="demote"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="demote_to_helper"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="do"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="dynamic_cast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="enum"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="explicit"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="export"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="extends"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="extern"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="external"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="fallthrough"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="filter"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="final"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="finally"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="friend"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="from"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="fxgroup"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="get"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="goto"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="groupshared"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="handle"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="highp"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="impl"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="implements"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="import"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="inline"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="inout"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="instanceof"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="interface"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="layout"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="lowp"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="macro"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="macro_rules"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="match"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mediump"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="meta"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mod"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="module"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="move"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mut"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="mutable"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="namespace"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="new"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="nil"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="noexcept"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="noinline"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="nointerpolation"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="noperspective"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="null"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="nullptr"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="of"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="operator"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="package"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="packoffset"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="partition"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="pass"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="patch"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="pixelfragment"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="precise"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="precision"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="premerge"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="priv"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="protected"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="pub"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="public"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="readonly"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="ref"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="regardless"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="register"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="reinterpret_cast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="requires"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="resource"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="restrict"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="self"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="set"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="shared"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="signed"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="sizeof"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="smooth"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="snorm"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="static"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="static_cast"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="std"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="subroutine"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="super"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="target"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="template"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="this"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="thread_local"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="throw"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="trait"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="try"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="typedef"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="typeid"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="typename"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="typeof"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="union"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="unless"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="unorm"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="unsafe"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="unsized"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="use"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="using"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="varying"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="virtual"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="volatile"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="wgsl"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="where"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="with"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="writeonly"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
   [:ident="yield"]
-    expected: FAIL
+    expected: [FAIL, TIMEOUT, NOTRUN]
 
 
 [cts.https.html?q=webgpu:shader,validation,parse,semicolon:after_fn_const_decl:*]
